change for helm command.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -39,20 +39,17 @@ steps:
 
   #Delpoy via Helm
   - name: 'gcr.io/$PROJECT_ID/helm'
-    entrypoint: /bin/bash
     args:
-      - '-c'
-      - |
-        helm upgrade -i my-go-app-test chart/ --set replicaCount=2
-    #      - upgrade
-#      - --install
-#      - my-go-app-test
-#      - chart/
-#      - --set
-#      - container.image=${_IMAGE_REPO_NAME}$(cat /image_info_volume/file)
+      - upgrade
+      - --install
+      - my-go-app-test
+      - chart/
+      - --set
+      - container.image=${_IMAGE_REPO_NAME}$TAG
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=europe-west6-b'
       - 'CLOUDSDK_CONTAINER_CLUSTER=internship-166-375809-prod-gke'
+      - TAG=$(cat /image_info_volume/file)
     volumes:
       - name: tag-info
         path: '/image_info_volume'
