change for helm command.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -49,7 +49,7 @@ steps:
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=europe-west6-b'
       - 'CLOUDSDK_CONTAINER_CLUSTER=internship-166-375809-prod-gke'
-      - TAG=$(cat /image_info_volume/file)
+      - 'TAG=$(cat /image_info_volume/file)'
     volumes:
       - name: tag-info
         path: '/image_info_volume'
