--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -39,17 +39,22 @@ steps:
 
   #Delpoy via Helm
   - name: 'gcr.io/$PROJECT_ID/helm'
+    entrypoint: /bin/bash
     args:
-      - upgrade
-      - --install
-      - my-go-app-test
-      - chart/
-      - --set
-      - container.image=${_IMAGE_REPO_NAME}$_MY_VAR
+      - '-c'
+      - |
+        tag=$(cat /image_info_volume/file)
+        ls -l
+        helm upgrade --install my-go-app-test chart/ --set container.image=${_IMAGE_REPO_NAME}${tag}
+#      - upgrade
+#      - --install
+#      - my-go-app-test
+#      - chart/
+#      - --set
+#      - container.image=${_IMAGE_REPO_NAME}$_MY_VAR
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=europe-west6-b'
       - 'CLOUDSDK_CONTAINER_CLUSTER=internship-166-375809-prod-gke'
-      - 'MY_VAR=$(cat /image_info_volume/file)'
     volumes:
       - name: tag-info
         path: '/image_info_volume'
