--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -14,6 +14,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: {{ .Release.Name }}-app
+                name: {{ .Release.Name }}-service
                 port:
                   number: 80
