--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app.kubernetes.io/name: {{ .Release.Name }}-app
+    app.kubernetes.io/name: {{ .Release.Name }}
   ports:
     - protocol: TCP
       port: 80
