--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-deployment
 spec:
   selector:
     matchLabels:
-      app: {{ .Release.Name }}
+      app: test-go-app-main
   replicas: {{ .Values.replicaCount }}
   template:
     metadata:
       labels:
-        app: {{ .Release.Name }}
+        app: test-go-app-main
     spec:
       containers:
-        - name: {{ .Release.Name }}
+        - name: test-go-app-main
           image: {{ .Values.container.image }}
       imagePullSecrets:
         - name: regcred
