--- a/app-chart/templates/ingress.yaml
+++ b/app-chart/templates/ingress.yaml
@@ -10,7 +10,7 @@ spec:
     - host: intership.itoutposts.ltd
       http:
         paths:
-          - path: /main(/|$)(.*)
+          - path: /{{ .Values.ingress.path.prefix }}(/|$)(.*)
             pathType: Prefix
             backend:
               service:
