--- a/app-chart/templates/service.yaml
+++ b/app-chart/templates/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: my-go-app-main
+    app: {{ .Release.Name }}-{{ .Values.branch.name}}
   ports:
     - protocol: TCP
       port: 80
