--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,7 +12,7 @@ steps:
       - |
         if [[ "$BRANCH_NAME" == "main" || "$BRANCH_NAME" == "dev" && -z "$TAG_NAME" ]] 
         then
-          dateOfImage=$(date '+%Y-%m-%d')
+          dateOfImage=$(date '+%Y-%m-%d-%H:%M')
           tag=":$BRANCH_NAME-${dateOfImage}-$SHORT_SHA"
           echo "Running on default branch '$BRANCH_NAME': tag = '${tag}'"
         else
