--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v2 # More information on this action can be found below in the 'AWS Credentials' section
         with:
           role-to-assume: arn:aws:iam::979063481013:oidc-provider/token.actions.githubusercontent.com
-          aws-region: eu-west-3
+          aws-region: us-east-1
 
       - name: Login
         id: login-ecr
