--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2 # More information on this action can be found below in the 'AWS Credentials' section
         with:
-          role-to-assume: arn:aws:iam::979063481013:role/github-actions-ecr-role
+          role-to-assume: arn:aws:iam::979063481013:role/github-actions-ecr
           aws-region: us-east-1
 
       - name: Login
