--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,6 +9,9 @@ jobs:
       id-token: write
       contents: read
     steps:
+      - name: List of the GitHub Actions environment variables
+        run: env
+        
       - name: Checkout repo
         uses: actions/checkout@v3
 
