--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,8 +9,8 @@ jobs:
       id-token: write
       contents: read
     steps:
-      - name: List of the GitHub Actions environment variables
-        run: echo ${{ toJson(github) }}
+#       - name: List of the GitHub Actions environment variables
+#         run: echo ${{ toJson(github) }}
         
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -29,7 +29,7 @@ jobs:
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: hello_repo
-          IMAGE_TAG: ${{ env.GITHUB_REF_NAME }}-${{ github.sha }}
+          IMAGE_TAG: ${{ github.ref_name }}-${{ github.sha }}
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
