--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,8 +9,11 @@ jobs:
       id-token: write
       contents: read
     steps:
-      - name: List of the GitHub Actions environment variables
-        run: env
+      - name: Get short SHA
+        run: echo "SHORT_SHA=$("${{ github.sha }}".SubString(0, 8))" >> $env:GITHUB_ENV
+
+      - name: Print short SHA
+        run: echo "Short SHA is ${{ env.SHORT_SHA }}"
         
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -29,7 +32,7 @@ jobs:
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: hello_repo
-          IMAGE_TAG: ${{ github.ref_name }}-$("${{ github.sha }}".SubString(0, 8))
+          IMAGE_TAG: ${{ github.ref_name }}-${{ env.SHORT_SHA }}
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
