--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,8 +12,8 @@ jobs:
       - name: Set short sha
         id: vars
         run: |
-          sha="${{ github.sha }}"
-          echo ${$sha:0:8} >> GITHUB_OUTPUT
+          sha_short=${{ github.sha }}
+          echo sha | cut -b -8 >> GITHUB_OUTPUT
       - name: Check outputs
         run: echo ${{ steps.vars.outputs.sha_short }}
         
@@ -34,7 +34,7 @@ jobs:
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: hello_repo
-          IMAGE_TAG: ${{ github.ref_name }}-${{ github.sha }}
+          IMAGE_TAG: ${{ github.ref_name }}-${{ github.sha_short }}
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
