--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ jobs:
         id: vars
         run: |
           sha_short=${{ github.sha }}
-          echo sha | cut -b -8 >> GITHUB_OUTPUT
+          echo sha_short | cut -c 1-8 >> GITHUB_OUTPUT
       - name: Check outputs
         run: echo ${{ steps.vars.outputs.sha_short }}
         
