--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,9 +13,9 @@ jobs:
         id: vars
         run: |
           sha_short=${{ github.sha }}
-          echo SHORT_SHA = $sha_short | cut -c 1-8 >> GITHUB_ENV
+          echo "SHORT_SHA = $sha_short | cut -c 1-8" >> GITHUB_ENV
       - name: Check outputs
-        run: echo ${{ steps.vars.outputs.sha_short }}
+        run: echo ${{ env.SHORT_SHA }}
         
       - name: Checkout repo
         uses: actions/checkout@v3
