--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ jobs:
         id: vars
         run: |
           sha=${{ github.sha }}
-          echo "sha_short=$sha | cut -c 1-8" >> $GITHUB_OUTPUT
+          echo "sha_short=$($sha | cut -c 1-8)" >> $GITHUB_OUTPUT
       - name: Check outputs
         run: echo ${{ steps.vars.outputs.sha_short }}
         
