--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,8 +12,7 @@ jobs:
       - name: Set short sha
         id: vars
         run: |
-          sha=${{ github.sha }}
-          echo "sha_short=$($sha | cut -c 1-8)" >> $GITHUB_OUTPUT
+          echo "sha_short=$(${{ github.sha }} | cut -c 1-8)" >> $GITHUB_OUTPUT
       - name: Check outputs
         run: echo ${{ steps.vars.outputs.sha_short }}
         
