--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,13 +9,7 @@ jobs:
       id-token: write
       contents: read
     steps:
-      - name: Set short sha
-        id: vars
-        run: |
-          echo "sha_short=$(${{ github.sha }} | cut -c 1-8)" >> $GITHUB_OUTPUT
-      - name: Check outputs
-        run: echo ${{ steps.vars.outputs.sha_short }}
-        
+    
       - name: Checkout repo
         uses: actions/checkout@v3
 
@@ -33,7 +27,7 @@ jobs:
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: hello_repo
-          IMAGE_TAG: ${{ github.ref_name }}-${{ steps.vars.outputs.sha_short }}
+          IMAGE_TAG: ${{ github.ref_name }}-$( ${{ github.sha }} | cut -c 1-8)
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
