--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,9 @@ jobs:
       id-token: write
       contents: read
     steps:
-    
+      - name: vars
+        id: vars
+        run: echo "date=$(date '+%Y-%m-%d_%H-%M')" >> $GITHUB_OUTPUT
       - name: Checkout repo
         uses: actions/checkout@v3
 
@@ -27,7 +29,7 @@ jobs:
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: hello_repo
-          IMAGE_TAG: ${{ github.ref_name }}-$(date '+%Y-%m-%d_%H-%M')-${{ github.sha }}
+          IMAGE_TAG: ${{ github.ref_name }}-${{ steps.outputs.vars.date }}-${{ github.sha }}
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
