--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ jobs:
         id: vars
         run: | 
           echo "date=$(date '+%Y-%m-%d_%H-%M')" >> $GITHUB_OUTPUT
-          echo "sha_short=$(echo ${{ github.sha }} | cut c 1-8)" >> $GITHUB_OUTPUT
+          echo "sha_short=$(echo ${{ github.sha }} | cut -c 1-8)" >> $GITHUB_OUTPUT
           
       - name: Checkout repo
         uses: actions/checkout@v3
